@@ -3,6 +3,7 @@ package engine.command.argument.base;
 import engine.command.argument.SimpleArgument;
 import engine.command.suggestion.Suggester;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -22,6 +23,6 @@ public class LongArgument extends SimpleArgument {
 
     @Override
     public Suggester getSuggester() {
-        return (sender, command, args) -> List.of("[num]");
+        return (sender, command, args) -> Arrays.asList("[num]");
     }
 }
