@@ -3,6 +3,7 @@ package engine.command.argument.base;
 import engine.command.argument.SimpleArgument;
 import engine.command.suggestion.Suggester;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -22,8 +23,8 @@ public class StringArgument extends SimpleArgument {
         return (sender, command, args) -> {
             String s = args[args.length - 1];
             if (s.isEmpty()) {
-                return List.of("[text]");
-            } else return List.of();
+                return Arrays.asList("[text]");
+            } else return Arrays.asList();
         };
     }
 }
